--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
+        android:id="@+id/nav_journal"
+        android:name="com.example.mobileapplabwork2.ui.journal.JournalFragment"
+        android:label="@string/menu_journal"
+        tools:layout="@layout/fragment_journal" />
+
+    <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.mobileapplabwork2.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
